// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders country loading state 1`] = `
Array [
  <h3
    className="formTitle"
  >
    <mock-FormattedMessage
      defaultMessage="Destination"
      id="shippingForm.formTitle"
    />
  </h3>,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        Country
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <select
            className="input"
            disabled={true}
            id="root"
            name="country"
            onBlur={[Function]}
            onChange={[Function]}
            value="US"
          >
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value=""
            >
              Loading Countries...
            </option>
          </select>
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </span>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        State
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="root"
            name="region"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        ZIP / Postal Code
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="root"
            name="zip"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <button
      className="root_normalPriority"
      disabled={false}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span
        className="content"
      >
        Get Shipping Options
      </span>
    </button>
  </form>,
]
`;

exports[`renders text input if no states returned 1`] = `
Array [
  <h3
    className="formTitle"
  >
    <mock-FormattedMessage
      defaultMessage="Destination"
      id="shippingForm.formTitle"
    />
  </h3>,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        Country
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <select
            className="input"
            disabled={false}
            id="root"
            name="country"
            onBlur={[Function]}
            onChange={[Function]}
            value="US"
          >
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="BK"
            >
              Bowsers Kingdom
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="MK"
            >
              Mushroom Kingdom
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="US"
            >
              United States
            </option>
          </select>
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </span>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        State
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="root"
            name="region"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        ZIP / Postal Code
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="root"
            name="zip"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <button
      className="root_normalPriority"
      disabled={false}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span
        className="content"
      >
        Get Shipping Options
      </span>
    </button>
  </form>,
]
`;

exports[`using localized data mocks renders empty form with no selected data 1`] = `
Array [
  <h3
    className="formTitle"
  >
    <mock-FormattedMessage
      defaultMessage="Destination"
      id="shippingForm.formTitle"
    />
  </h3>,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        Country
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <select
            className="input"
            disabled={false}
            id="root"
            name="country"
            onBlur={[Function]}
            onChange={[Function]}
            value="US"
          >
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="BK"
            >
              Bowsers Kingdom
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="MK"
            >
              Mushroom Kingdom
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="US"
            >
              United States
            </option>
          </select>
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </span>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        State
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <select
            className="input"
            id="root"
            name="region"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          >
            <option
              disabled={true}
              hidden={true}
              id="SAMPLE-ID"
              value=""
            >
              
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="NY"
            >
              New York
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="TX"
            >
              Texas
            </option>
          </select>
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </span>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        ZIP / Postal Code
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="root"
            name="zip"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <button
      className="root_normalPriority"
      disabled={false}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span
        className="content"
      >
        Get Shipping Options
      </span>
    </button>
  </form>,
]
`;

exports[`using localized data mocks renders selected fields and hides submit button with methods 1`] = `
Array [
  <h3
    className="formTitle"
  >
    <mock-FormattedMessage
      defaultMessage="Destination"
      id="shippingForm.formTitle"
    />
  </h3>,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        Country
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <select
            className="input"
            disabled={false}
            id="root"
            name="country"
            onBlur={[Function]}
            onChange={[Function]}
            value="US"
          >
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="BK"
            >
              Bowsers Kingdom
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="MK"
            >
              Mushroom Kingdom
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="US"
            >
              United States
            </option>
          </select>
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </span>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        State
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <select
            className="input"
            id="root"
            name="region"
            onBlur={[Function]}
            onChange={[Function]}
            value="TX"
          >
            <option
              disabled={true}
              hidden={true}
              id="SAMPLE-ID"
              value=""
            >
              
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="NY"
            >
              New York
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="TX"
            >
              Texas
            </option>
          </select>
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </span>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        ZIP / Postal Code
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="root"
            name="zip"
            onBlur={[Function]}
            onChange={[Function]}
            value="78701"
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
  </form>,
]
`;

exports[`using localized data mocks submit button disabled while mutation in flight 1`] = `
Array [
  <h3
    className="formTitle"
  >
    <mock-FormattedMessage
      defaultMessage="Destination"
      id="shippingForm.formTitle"
    />
  </h3>,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        Country
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <select
            className="input"
            disabled={false}
            id="root"
            name="country"
            onBlur={[Function]}
            onChange={[Function]}
            value="US"
          >
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="BK"
            >
              Bowsers Kingdom
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="MK"
            >
              Mushroom Kingdom
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="US"
            >
              United States
            </option>
          </select>
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </span>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        State
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <select
            className="input"
            id="root"
            name="region"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          >
            <option
              disabled={true}
              hidden={true}
              id="SAMPLE-ID"
              value=""
            >
              
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="NY"
            >
              New York
            </option>
            <option
              disabled={null}
              hidden={null}
              id="SAMPLE-ID"
              value="TX"
            >
              Texas
            </option>
          </select>
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </span>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="root"
      >
        ZIP / Postal Code
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="root"
            name="zip"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <button
      className="root_normalPriority"
      disabled={true}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span
        className="content"
      >
        Loading Methods...
      </span>
    </button>
  </form>,
]
`;
